test(41848): tested and fixed