@@ -7,13 +7,17 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
+import school.faang.user_service.dto.goal.GoalCompletedEvent;
 import school.faang.user_service.dto.goal.GoalDto;
+import school.faang.user_service.dto.goal.UpdateGoalDto;
 import school.faang.user_service.entity.goal.Goal;
+import school.faang.user_service.entity.goal.GoalStatus;
 import school.faang.user_service.entity.skill.Skill;
 import school.faang.user_service.exception.data.DataNotMatchException;
 import school.faang.user_service.exception.data.DataValidationException;
+import school.faang.user_service.exception.entity.EntityNotFoundException;
 import school.faang.user_service.mapper.goal.GoalMapperImpl;
-import school.faang.user_service.mapper.user.UserMapper;
+import school.faang.user_service.mapper.user.UserMapperImpl;
 import school.faang.user_service.publisher.goal.GoalCompletedEventPublisher;
 import school.faang.user_service.repository.goal.GoalRepository;
 import school.faang.user_service.service.skill.SkillServiceInterface;
@@ -22,10 +26,17 @@ import school.faang.user_service.validator.skill.SkillServiceValidator;
 import school.faang.user_service.validator.user.UserServiceValidator;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 import static org.junit.Assert.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
@@ -54,7 +65,7 @@ public class GoalServiceImplTest {
     private GoalMapperImpl goalMapper;
 
     @Spy
-    private UserMapper userMapper;
+    private UserMapperImpl userMapper;
 
     @Mock
     private GoalCompletedEventPublisher goalCompletedEventPublisher;
@@ -65,6 +76,7 @@ public class GoalServiceImplTest {
     private GoalDto goalDto;
     private Goal goal;
     private long userId;
+    private UpdateGoalDto updateGoalDto;
 
     @BeforeEach
     void setUp() {
@@ -81,9 +93,16 @@ public class GoalServiceImplTest {
                 .title("title")
                 .description("description")
                 .deadline(LocalDateTime.now())
-                .skillsToAchieve(List.of(
+                .skillsToAchieve(new ArrayList<>(Arrays.asList(
                         Skill.builder().id(1L).build(),
-                        Skill.builder().id(2L).build()))
+                        Skill.builder().id(2L).build())))
+                .build();
+        updateGoalDto = UpdateGoalDto.builder()
+                .id(1L)
+                .title("title")
+                .description("description")
+                .skillsToAchieveIds(List.of(1L))
+                .status(GoalStatus.COMPLETED)
                 .build();
     }
 
@@ -157,5 +176,60 @@ public class GoalServiceImplTest {
                 .validateSkillsExist(goalDto.getSkillsToAchieveIds());
         verify(goalRepository, never())
                 .create(goalDto.getTitle(), goalDto.getDescription(), goalDto.getParentId(), goalDto.getDeadline());
+    }
+
+    @Test
+    public void testToUpdate_whenValidData_Success() {
+        when(goalRepository.findById(updateGoalDto.getId()))
+                .thenReturn(Optional.of(goal));
+
+        GoalDto updatedGoal = goalService.update(updateGoalDto);
+
+        assertNotNull(updatedGoal);
+        verify(goalServiceValidator, times(1))
+                .validateForUpdating(updateGoalDto);
+        verify(goalRepository, times(1))
+                .findById(updateGoalDto.getId());
+        verify(skillService, times(1))
+                .addSkillsToUsersByGoalId(eq(updateGoalDto.getId()));
+        verify(goalCompletedEventPublisher, times(1))
+                .publish(any(GoalCompletedEvent.class));
+        verify(skillService, times(1))
+                .getSKillsByIds(eq(updateGoalDto.getSkillsToAchieveIds()));
+    }
+
+    @Test
+    public void testToUpdate_whenValidDataWithActiveStatus_Success() {
+        goal.setStatus(GoalStatus.ACTIVE);
+        updateGoalDto.setStatus(GoalStatus.ACTIVE);
+        when(goalRepository.findById(updateGoalDto.getId()))
+                .thenReturn(Optional.of(goal));
+
+        GoalDto updatedGoal = goalService.update(updateGoalDto);
+
+        assertNotNull(updatedGoal);
+        verify(goalServiceValidator, times(1))
+                .validateForUpdating(updateGoalDto);
+        verify(goalRepository, times(1))
+                .findById(updateGoalDto.getId());
+        verify(skillService, never())
+                .addSkillsToUsersByGoalId(eq(updateGoalDto.getId()));
+        verify(skillService, times(1))
+                .getSKillsByIds(eq(updateGoalDto.getSkillsToAchieveIds()));
+    }
+
+    @Test
+    public void testToUpdate_GoalWithNotExistsId_ThrowEntityNotFoundException() {
+        doThrow(new EntityNotFoundException("goal not found", updateGoalDto.getId()))
+                .when(goalServiceValidator)
+                .validateForUpdating(updateGoalDto);
+
+        assertThrows(EntityNotFoundException.class,
+                () -> goalService.update(updateGoalDto));
+        verify(goalServiceValidator, times(1))
+                .validateForUpdating(updateGoalDto);
+        verify(goalRepository, never()).findById(anyLong());
+        verify(skillService, never()).getSKillsByIds(anyList());
+        verify(skillService, never()).addSkillsToUsersByGoalId(anyLong());
     }
 }
